--- a/index.html
+++ b/index.html
@@ -15,16 +15,17 @@
                 <input type="text" name="task" id="task" placeholder="O que você tem para fazer?">
                 <button type="submit" id="add"><i class="fa fa-plus"></i></button>
             </form>
-            <div id="tasks-container">
-                <h2>Veja suas tarefas:</h2>
-                <div class="task">
-                    <i class="fa fa-check"></i>
-                    <span class="task-title">Título da tarefa</span>
-                    <i class="fa fa-trash hide" id="trash"></i>
-                </div>
-                <p id="empty-tasks">Não há tarefas cadastradas.</p>
-            </div>
         </div>
+        <div id="tasks-container">
+            <h2>Veja suas tarefas:</h2>
+            <div class="task">
+                <i class="fa fa-check" id="check"></i>
+                <span class="task-title">Título da tarefa</span>
+                <i class="fa fa-trash hide" id="trash"></i>
+            </div>
+            <p id="empty-tasks">Não há tarefas cadastradas.</p>
+        </div>
+        
     </div>
     <script src="js/scripts.js"></script>
 </body>
