--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
         </div>
         <div id="tasks-container">
             <h2>Veja suas tarefas:</h2>
-            <div class="task">
+            <div class="task hide" id="task-result">
                 <i class="fa fa-check" id="check"></i>
-                <span class="task-title">Título da tarefa</span>
+                <span class="task-title">Título das tarefas</span>
                 <i class="fa fa-trash hide" id="trash"></i>
             </div>
             <p id="empty-tasks">Não há tarefas cadastradas.</p>
