--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="task hide" id="task-result">
                 <i class="fa fa-check" id="check"></i>
                 <span class="task-title">Título das tarefas</span>
-                <i class="fa fa-trash hide" id="trash"></i>
+                <i class="fa fa-trash" id="trash"></i>
             </div>
             <p id="empty-tasks">Não há tarefas cadastradas.</p>
         </div>
